--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,25 +120,41 @@ jobs:
             echo "🔄 Incremented version by 1 (hex): $new_tag (from $prev)"
           fi
 
-      - name: Check if tag already exists and handle conflict
-        id: check_tag
+      - name: Find available tag version
+        id: find_available_tag
         run: |
-          new_tag="${{ steps.get_version.outputs.new_tag }}"
+          initial_tag="${{ steps.get_version.outputs.new_tag }}"
+          echo "🔍 Starting tag search from: $initial_tag"
           
-          if git rev-parse -q --verify "refs/tags/${new_tag}" >/dev/null; then
-            echo "⚠️ Tag ${new_tag} already exists."
+          # 初期タグから始めて、利用可能なタグを見つける
+          base_tag=${initial_tag#v}
+          IFS='.' read -r MA MI PA <<< "$base_tag"
+          
+          ma_dec=$((16#$MA))
+          mi_dec=$((16#$MI))
+          pa_dec=$((16#$PA))
+          
+          max_attempts=50  # 最大50回まで試行
+          attempts=0
+          
+          while [ $attempts -lt $max_attempts ]; do
+            current_tag=$(printf "v%x.%x.%x" $ma_dec $mi_dec $pa_dec)
             
-            # 既存のタグが存在する場合、自動的に次のバージョンを生成
-            base_tag=${new_tag#v}
-            IFS='.' read -r MA MI PA <<< "$base_tag"
+            echo "🔍 Checking tag: $current_tag"
             
-            ma_dec=$((16#$MA))
-            mi_dec=$((16#$MI))  
-            pa_dec=$((16#$PA))
+            if ! git rev-parse -q --verify "refs/tags/${current_tag}" >/dev/null 2>&1; then
+              echo "✅ Found available tag: $current_tag"
+              echo "available_tag=$current_tag" >> $GITHUB_OUTPUT
+              echo "found=true" >> $GITHUB_OUTPUT
+              exit 0
+            else
+              echo "⚠️ Tag $current_tag already exists"
+            fi
             
-            # パッチバージョンを1つ上げる
+            # 次のバージョンを計算
             pa_dec=$((pa_dec + 1))
             
+            # 16進数の桁上がり処理
             if [ $pa_dec -ge 16 ]; then
               mi_dec=$((mi_dec + pa_dec / 16))
               pa_dec=$((pa_dec % 16))
@@ -149,108 +165,28 @@ jobs:
               mi_dec=$((mi_dec % 16))
             fi
             
-            auto_tag=$(printf "v%x.%x.%x" $ma_dec $mi_dec $pa_dec)
-            echo "🔄 Auto-generating next version: $auto_tag"
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "auto_tag=$auto_tag" >> $GITHUB_OUTPUT
-          else
-            echo "✅ Tag ${new_tag} is available"
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "auto_tag=$new_tag" >> $GITHUB_OUTPUT
-          fi
+            attempts=$((attempts + 1))
+          done
+          
+          echo "❌ Could not find available tag after $max_attempts attempts"
+          echo "found=false" >> $GITHUB_OUTPUT
+          exit 1
 
-      - name: Set final tag version
-        id: final_version
+      - name: Verify final tag availability
+        id: verify_tag
         run: |
-          if [ "${{ steps.check_tag.outputs.exists }}" == "true" ]; then
-            final_tag="${{ steps.check_tag.outputs.auto_tag }}"
-            echo "Using auto-generated tag: $final_tag"
+          final_tag="${{ steps.find_available_tag.outputs.available_tag }}"
+          
+          echo "🔍 Final verification for tag: $final_tag"
+          
+          if git rev-parse -q --verify "refs/tags/${final_tag}" >/dev/null 2>&1; then
+            echo "❌ ERROR: Tag $final_tag exists during final check!"
+            echo "This should not happen. Please check for race conditions."
+            exit 1
           else
-            final_tag="${{ steps.get_version.outputs.new_tag }}"
-            echo "Using original tag: $final_tag"
+            echo "✅ Final tag verification passed: $final_tag"
+            echo "verified_tag=$final_tag" >> $GITHUB_OUTPUT
           fi
-          echo "tag=$final_tag" >> $GITHUB_OUTPUT
 
       - name: Create and push tag
-        run: |
-          new_tag="${{ steps.final_version.outputs.tag }}"
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          
-          if [ "${{ steps.get_version.outputs.from_commit }}" == "true" ]; then
-            git tag -a "$new_tag" -m "Release $new_tag (from commit message)"
-          else
-            git tag -a "$new_tag" -m "Release $new_tag (auto-incremented hex)"
-          fi
-          
-          git push origin "$new_tag"
-          echo "🏷️ Created and pushed tag: $new_tag"
-
-      - name: Create ZIP of current commit
-        id: zip
-        run: |
-          zipname="site-${{ steps.final_version.outputs.tag }}.zip"
-          zip -r "$zipname" . -x "./.git/*" "./.github/*"
-          echo "zipname=$zipname" >> $GITHUB_OUTPUT
-          echo "📦 Created ZIP: $zipname"
-
-      - name: Generate release notes
-        id: release_notes
-        run: |
-          tag="${{ steps.final_version.outputs.tag }}"
-          commit_msg="${{ steps.commit_info.outputs.commit_msg }}"
-          commit_author="${{ steps.commit_info.outputs.commit_author }}"
-          commit_hash="${{ steps.commit_info.outputs.commit_hash }}"
-          commit_date="${{ steps.commit_info.outputs.commit_date }}"
-          commits_count="${{ steps.commits_since_release.outputs.commits_count }}"
-          latest_tag="${{ steps.commits_since_release.outputs.latest_tag }}"
-          
-          cat > release_notes.md << EOF
-          ## 📋 Release Information
-          
-          **Version**: $tag  
-          **Release Date**: $(date '+%Y-%m-%d %H:%M:%S JST')  
-          **Commits Included**: $commits_count commits
-          
-          ## 📝 Latest Commit
-          
-          - **Message**: $commit_msg
-          - **Author**: $commit_author
-          - **Hash**: $commit_hash
-          - **Date**: $commit_date
-          
-          ## 📊 Changes Since Last Release
-          
-          EOF
-          
-          if [ -n "$latest_tag" ]; then
-            echo "**Since**: $latest_tag" >> release_notes.md
-            echo "" >> release_notes.md
-            cat commits_log.txt >> release_notes.md
-          else
-            echo "This is the initial release." >> release_notes.md
-          fi
-          
-          echo "" >> release_notes.md
-          echo "## 📦 Assets" >> release_notes.md
-          echo "- Source code archive (ZIP)" >> release_notes.md
-          
-          # コミットボディがある場合は追加
-          if [ -s commit_body.txt ]; then
-            echo "" >> release_notes.md
-            echo "## 📖 Commit Details" >> release_notes.md
-            echo "" >> release_notes.md
-            cat commit_body.txt >> release_notes.md
-          fi
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ steps.final_version.outputs.tag }}
-          name: "🚀 Release ${{ steps.final_version.outputs.tag }}"
-          draft: false
-          prerelease: false
-          body_path: release_notes.md
-          files: ${{ steps.zip.outputs.zipname }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: steps.find_available_tag.outputs.foun
